adding comments to better understand the base code

--- a/Hexmap/hex_grid_with_jquery.html
+++ b/Hexmap/hex_grid_with_jquery.html
@@ -24,7 +24,7 @@
               outline: none;
             }
             .hexfield.clicked{
-              fill: black;
+              fill: red;
             }
         </style>
     </head>
@@ -77,19 +77,31 @@
             $(document).ready(function() {
                 <!-- main initialisation -->
                 var rebuild = function () {
-                  debugger
+                  <!-- mass assign vars? -->
                   var
                     radius = parseInt($('#radius').val()),
                     columns = parseInt($('#columns').val()),
                     rows = parseInt($('#rows').val()),
                     cssClass = 'hexfield';
 
-                  $('#container').empty().hexGridWidget(radius, columns, rows, cssClass).on('hexclick', function (e) {
-                     $('#logger').text('clicked [' + e.column + ',' + e.row + '] hex with center at [' + e.center.x + ',' + e.center.y + '] px');
+                    <!-- clear the container element of all hexagaons, this can be chained with the below line, -->
+                    <!-- but I thought it was more clear here -->
+                    $('#container').empty();
+
+                    <!-- hexGridWidget is a function being called on '#container' that creates the hexagon grid and assigns event handler for 'hexclick' -->
+                    $('#container').hexGridWidget(radius, columns, rows, cssClass).on('hexclick', function (e) {
+
+                    <!-- update the text of logger element -->
+                    $('#logger').text('clicked [' + e.column + ',' + e.row + '] hex with center at [' + e.center.x + ',' + e.center.y + '] px');
                   });
+
+                  <!-- seemingly take advantage of event bubble up to handle all clicks? -->
                   $('#container .hexfield').click(function () {
+                    debugger
+                    <!-- what is 'this' in this context -->
                     this.classList.toggle('clicked');
                   });
+
                 };
                 $('#rebuild').click(rebuild);
                 rebuild();
